--- a/pom.xml
+++ b/pom.xml
@@ -167,14 +167,19 @@
 			<version>2.4.0</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sf.jwordnet</groupId>
-			<artifactId>jwnl</artifactId>
-			<version>1.4_rc3</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.8.8</version>
 		</dependency>
 	</dependencies>
 	<scm>
-		<url>scm:git:git@github.com:hunterhector/hw3-zhengzhl.git</url>
-		<connection>scm:git:git@github.com:hunterhector/hw3-zhengzhl.git</connection>
+		<url>scm:git:git@github.com:hunterhector/dbpedia-uima-as-service.git</url>
+		<connection>scm:git:git@github.com:hunterhector/dbpedia-uima-as-service.git</connection>
 	</scm>
 
 </project>
