--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f13.hw3</groupId>
 	<artifactId>services-dbpeida-spotlight-zhengzhl</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>Dbpedia spotlight services</name>
 	<description>A service to query Dbpedia spotlight and return the corresponding attributes</description>
 
